<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="account_locked_no_reason">"Your account has been locked down.
Please contact your operator for more details."</string>
    <string name="account_locked_operator_reason">"Your account has been locked down for the following reason:

\"%s\".

Please contact your operator for more details."</string>
    <string name="account_not_activate">Account not active</string>
    <string name="activated_devices">Activated devices</string>
    <string name="activation_email_sent">The activation email has been sent to your email address!</string>
    <string name="all_episodes">All Episodes</string>
    <string name="all_networks_title">All Networks</string>
    <string name="all_ott_channels">All OTT Channels</string>
    <string name="all_social_broadcasts">All Social Broadcasts</string>
    <string name="all_videos">All Videos</string>
    <string name="app_name">woplay.tv</string>
    <string name="app_tagline">Live HD Streaming Video Platforms</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_focus_stopped_playback">We have stopped playback because another application requested audio focus.</string>
    <string name="authentication_successful">Authentication successful</string>
    <string name="autoupdate_cancel">Cancel</string>
    <string name="autoupdate_checking">Checking for latest version …</string>
    <string name="autoupdate_confirm">Update</string>
    <string name="autoupdate_no_update">You already have the latest version</string>
    <string name="autoupdate_skip">Later</string>
    <string name="autoupdate_update_tips">New version available</string>
    <string name="available_packages">Available Packages</string>
    <string name="back">Back</string>
    <string name="back_to_guide">Back to Guide</string>
    <string name="back_to_packages">Back to Packages</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="breadcrumb_packages">/ %s / Packages</string>
    <string name="button_account">Account Details</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_login">Log In</string>
    <string name="button_logout">Log Out</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_open_channel_guide">Open Channel Guide</string>
    <string name="button_retry">Retry</string>
    <string name="button_send_email">Send Email</string>
    <string name="buy_this_music">Buy this music</string>
    <string name="cancel">Cancel</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="ccl_cancel">Cancel</string>
    <string name="ccl_caption">Caption</string>
    <string name="ccl_caption_audio">Audio</string>
    <string name="ccl_caption_no_audio_tracks">No Audio Tracks Available</string>
    <string name="ccl_caption_no_text_tracks">No Text Tracks Available</string>
    <string name="ccl_caption_no_tracks_available">No tracks available</string>
    <string name="ccl_caption_subtitles">Subtitles</string>
    <string name="ccl_casting_to_device">Casting to %1$s</string>
    <string name="ccl_disconnect">Disconnect</string>
    <string name="ccl_error">Error</string>
    <string name="ccl_failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="ccl_failed_authorization_timeout">Authorization timed out</string>
    <string name="ccl_failed_no_connection">No connection to the cast device is present</string>
    <string name="ccl_failed_no_connection_short">No connection</string>
    <string name="ccl_failed_no_connection_trans">Connection to the cast device has been lost. Application is trying to re-establish the connection, if possible. Please wait for a few seconds and try again.</string>
    <string name="ccl_failed_perform_action">Failed to perform the action</string>
    <string name="ccl_failed_receiver_player_error">Receiver player has encountered a severe error</string>
    <string name="ccl_failed_seek">Failed to seek to the new position on the cast device</string>
    <string name="ccl_failed_setting_volume">Failed to set the volume</string>
    <string name="ccl_failed_status_request">Failed to sync up with the cast device</string>
    <string name="ccl_failed_to_connect">Could not connect to the device</string>
    <string name="ccl_failed_to_find_app">The application you are trying to launch is not available on your Cast device</string>
    <string name="ccl_failed_to_launch_app">Failed to launch application</string>
    <string name="ccl_failed_to_load_media">Failed to load the media</string>
    <string name="ccl_failed_to_pause">Failed to pause the playback of media</string>
    <string name="ccl_failed_to_play">Failed to start the playback of media</string>
    <string name="ccl_failed_to_set_track_style">Failed to update the captions style.</string>
    <string name="ccl_failed_to_stop">Failed to stop the playback of media</string>
    <string name="ccl_forward">Forward</string>
    <string name="ccl_info_na">Information Not Available</string>
    <string name="ccl_intro_overlay_button_text">@android:string/ok</string>
    <string name="ccl_key_caption_background_color">ccl_caption_background_color</string>
    <string name="ccl_key_caption_background_opacity">ccl_caption_font_background_opacity</string>
    <string name="ccl_key_caption_edge_type">ccl_caption_edge_type</string>
    <string name="ccl_key_caption_enabled">ccl_caption_enabled</string>
    <string name="ccl_key_caption_font_family">ccl_caption_font_family</string>
    <string name="ccl_key_caption_font_scale">ccl_caption_font_scale</string>
    <string name="ccl_key_caption_text_color">ccl_caption_text_color</string>
    <string name="ccl_key_caption_text_opacity">ccl_caption_text_opacity</string>
    <string name="ccl_live">Live</string>
    <string name="ccl_loading">Loading…</string>
    <string name="ccl_media_route_menu_title">Play on…</string>
    <string name="ccl_mini_upnext">Up Next</string>
    <string name="ccl_no_media_info">No media information available</string>
    <string name="ccl_none">None</string>
    <string name="ccl_off">Off</string>
    <string name="ccl_ok">OK</string>
    <string name="ccl_on">On</string>
    <string name="ccl_pause">Pause</string>
    <string name="ccl_pick_tracks">Tracks</string>
    <string name="ccl_play">Play</string>
    <string name="ccl_prefs_caption_background_color_title">Background Color</string>
    <string name="ccl_prefs_caption_background_color_value_default">\#000000</string>
    <string name="ccl_prefs_caption_background_opacity_title">Background Opacity</string>
    <string name="ccl_prefs_caption_background_opacity_value_default">FF</string>
    <string name="ccl_prefs_caption_disabled">Disabled</string>
    <string name="ccl_prefs_caption_edge_color_title">Edge Color</string>
    <string name="ccl_prefs_caption_edge_type_title">Edge Type</string>
    <string name="ccl_prefs_caption_edge_type_value_default">EDGE_TYPE_NONE</string>
    <string name="ccl_prefs_caption_enabled">Enabled</string>
    <string name="ccl_prefs_caption_enabled_title">Caption Availability</string>
    <string name="ccl_prefs_caption_font_family_title">Font Family</string>
    <string name="ccl_prefs_caption_font_family_value_default">FONT_FAMILY_SERIF</string>
    <string name="ccl_prefs_caption_font_scale_title">Text Size</string>
    <string name="ccl_prefs_caption_font_scale_value_default">1.0</string>
    <string name="ccl_prefs_caption_text_color_title">Text Color</string>
    <string name="ccl_prefs_caption_text_color_value_default">\#FFFFFF</string>
    <string name="ccl_prefs_caption_text_opacity_title">Text Opacity</string>
    <string name="ccl_prefs_caption_text_opacity_value_default">FF</string>
    <string name="ccl_rewind">Rewind</string>
    <string name="hint_affiliate_id">Affiliate ID (optional)</string>
    <string name="hint_dealer_referral_id">Referral ID (optional)</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_registered_email_address">Registered Email Address</string>
    <string name="hint_username">Username</string>
    <string name="label_adult">18+</string>
    <string name="label_catchup_tv">CU</string>
    <string name="label_hd">HD</string>
    <string name="label_live">LIVE</string>
    <string name="label_radio">RAD</string>
    <string name="label_sling">SL</string>
    <string name="label_tve">TVE</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_username_password">Log In Using Username and Password</string>
    <string name="no_network_details">Make sure your network settings are correct, depending on the type of connection you have. Once the issue is fixed, press the Retry button to continue.</string>
    <string name="no_network_title">No network connection has been detected</string>
    <string name="or_login_with">Or Log In With</string>
    <string name="or_register_with">Or Register With</string>
    <string name="register_account">Register a New Account</string>
    <string name="register_new_account">"Don't have an account? Register one here"</string>
    <string name="register_show_password">Show password</string>
    <string name="title_forgot_password">Forgot Password</string>
</resources>