<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/epg_grid_cell_spacing" android:animateLayoutChanges="true" android:layout_marginEnd="@dimen/epg_grid_cell_spacing"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/channel_container" android:background="@drawable/guide_item_header_normal" android:layout_width="@dimen/epg_player_width" android:layout_height="@dimen/epg_grid_cell_height" android:layout_marginStart="@dimen/epg_grid_cell_spacing">
        <TextView android:textSize="@dimen/epg_cell_text_size" android:gravity="end" android:layout_gravity="center_vertical" android:id="@id/channel_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/epg_grid_cell_padding_horizontal" android:paddingEnd="@dimen/epg_grid_cell_padding_horizontal" />
        <ImageView android:id="@id/channel_image" android:layout_width="@dimen/epg_logo_width" android:layout_height="@dimen/epg_logo_height" android:layout_marginTop="@dimen/epg_grid_cell_padding_vertical" android:adjustViewBounds="true" />
        <TextView android:textSize="@dimen/epg_cell_text_size" android:layout_gravity="center_vertical" android:id="@id/channel_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="2" android:layout_weight="1.0" android:paddingStart="@dimen/epg_grid_cell_padding_horizontal" android:paddingEnd="@dimen/epg_grid_cell_padding_horizontal" />
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:paddingTop="@dimen/epg_grid_cell_padding_vertical" android:paddingBottom="@dimen/epg_grid_cell_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/epg_grid_cell_padding_horizontal" android:paddingEnd="@dimen/epg_grid_cell_padding_horizontal">
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_live" android:gravity="center" android:id="@id/label_live" android:background="@drawable/label_live" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:text="@string/label_live" />
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_radio" android:gravity="center" android:id="@id/label_radio" android:background="@drawable/label_radio" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:text="@string/label_radio" />
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_catchup_tv" android:gravity="center" android:id="@id/label_catchup_tv" android:background="@drawable/label_catchup_tv" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:text="@string/label_catchup_tv" />
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_tve" android:gravity="center" android:id="@id/label_tve" android:background="@drawable/label_tve" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:text="@string/label_tve" />
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_sling" android:gravity="center" android:id="@id/label_sling" android:background="@drawable/label_sling" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:text="@string/label_sling" />
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_adult" android:gravity="center" android:id="@id/label_adult" android:background="@drawable/label_adult" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:layout_marginTop="@dimen/epg_grid_cell_padding_vertical" android:text="@string/label_adult" />
            <TextView android:textSize="@dimen/epg_channel_label_text_size" android:textColor="@color/label_hd" android:gravity="center" android:id="@id/label_hd" android:background="@drawable/label_hd" android:visibility="gone" android:layout_width="@dimen/epg_channel_label_width" android:layout_height="@dimen/epg_channel_label_height" android:layout_marginTop="@dimen/epg_grid_cell_padding_vertical" android:text="@string/label_hd" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/events" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
</LinearLayout>