<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/container" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/includedHeader" layout="@layout/partial_header" />
    <LinearLayout android:orientation="horizontal" android:id="@id/register" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/includedHeader">
        <View android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/register_width_weight_margins" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/register_width_weight_center">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/register_title_margin_bottom" android:text="@string/register_account" />
            <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:textColor="#ff333333" android:textColorHint="#33333333" android:id="@id/username" android:background="@drawable/form_item" android:paddingTop="@dimen/register_input_padding_vertical" android:paddingBottom="@dimen/register_input_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/register_username_margin_bottom" android:hint="@string/hint_username" android:inputType="text" android:paddingStart="@dimen/register_input_padding_horizontal" android:paddingEnd="@dimen/register_input_padding_horizontal" style="@style/TextLarge" />
                    <EditText android:textColor="#ff333333" android:textColorHint="#33333333" android:id="@id/email" android:background="@drawable/form_item" android:paddingTop="@dimen/register_input_padding_vertical" android:paddingBottom="@dimen/register_input_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/register_username_margin_bottom" android:hint="@string/hint_email_address" android:inputType="textEmailAddress" android:paddingStart="@dimen/register_input_padding_horizontal" android:paddingEnd="@dimen/register_input_padding_horizontal" style="@style/TextLarge" />
                    <EditText android:textColor="#ff333333" android:textColorHint="#33333333" android:id="@id/password" android:background="@drawable/form_item" android:paddingTop="@dimen/register_input_padding_vertical" android:paddingBottom="@dimen/register_input_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_password" android:inputType="textPassword" android:paddingStart="@dimen/register_input_padding_horizontal" android:paddingEnd="@dimen/register_input_padding_horizontal" style="@style/TextLarge" />
                    <CheckBox android:id="@id/showPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/register_username_margin_bottom" android:checked="false" android:text="@string/register_show_password" />
                    <EditText android:textColor="#ff333333" android:textColorHint="#33333333" android:id="@id/affiliateId" android:background="@drawable/form_item" android:paddingTop="@dimen/register_input_padding_vertical" android:paddingBottom="@dimen/register_input_padding_vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/register_username_margin_bottom" android:hint="@string/hint_affiliate_id" android:inputType="number" android:paddingStart="@dimen/register_input_padding_horizontal" android:paddingEnd="@dimen/register_input_padding_horizontal" style="@style/TextLarge" />
                    <EditText android:textColor="#ff333333" android:textColorHint="#33333333" android:id="@id/dealerReferralId" android:background="@drawable/form_item" android:paddingTop="@dimen/register_input_padding_vertical" android:paddingBottom="@dimen/register_input_padding_vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/register_username_margin_bottom" android:hint="@string/hint_dealer_referral_id" android:paddingStart="@dimen/register_input_padding_horizontal" android:paddingEnd="@dimen/register_input_padding_horizontal" style="@style/TextLarge" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <Button android:theme="@style/AppTheme.Button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_create_account" android:onClick="register" />
                        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                    </LinearLayout>
                    <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_marginBottom="20.0dip" android:text="@string/or_register_with" />
                    <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/facebook" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Facebook" android:layout_weight="1.0" android:fontFamily="sans-serif-bold" android:layout_marginEnd="5.0dip" />
                        <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Twitter" android:layout_weight="1.0" android:drawable="@drawable/twitter" android:fontFamily="sans-serif-bold" android:layout_marginStart="5.0dip" />
                    </LinearLayout>
                    <Button android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Already have an account? Login here" android:onClick="launchLogin" style="?android:borderlessButtonStyle" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <View android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/register_width_weight_margins" />
    </LinearLayout>
</RelativeLayout>