<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/container" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header_container" layout="@layout/partial_header" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/login_width_weight_margins" />
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/login_width_weight_center">
            <LinearLayout android:orientation="vertical" android:background="@drawable/overlay_background" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <TextView android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/no_network_title" style="@style/TextLargeBold" />
                <TextView android:gravity="center" android:id="@id/first_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_network_details" android:lineSpacingMultiplier="1.2" style="@style/TextLarge" />
                <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
                    <Button android:theme="@style/AppTheme.Button" android:id="@id/retry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_retry">
                        <requestFocus />
                    </Button>
                    <Button android:theme="@style/AppTheme.Button" android:id="@id/open_network_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_network_settings" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/login_width_weight_margins" />
    </LinearLayout>
</RelativeLayout>