<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/container" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/partial_header" />
    <LinearLayout android:orientation="horizontal" android:id="@id/resend_activation_email" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/login_width_weight_margins" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/login_width_weight_center">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/login_title_margin_bottom" android:text="@string/title_forgot_password" />
            <EditText android:textColor="#ff333333" android:textColorHint="#33333333" android:id="@id/email" android:background="@drawable/form_item" android:paddingTop="@dimen/login_input_padding_vertical" android:paddingBottom="@dimen/login_input_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/login_username_margin_bottom" android:hint="@string/hint_registered_email_address" android:paddingStart="@dimen/login_input_padding_horizontal" android:paddingEnd="@dimen/login_input_padding_horizontal" style="@style/TextLarge">
                <requestFocus />
            </EditText>
            <Button android:theme="@style/AppTheme.Button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_send_email" android:onClick="sendEmail" />
        </LinearLayout>
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/login_width_weight_margins" />
    </LinearLayout>
</RelativeLayout>